--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "deploy": "vite build && gh-pages -d dist",
+    "deploy": "vite build && gh-pages -d dist -r https://github.com/malliex/onetwo-br-extractor.git",
     "lint": "eslint .",
     "preview": "vite preview"
   },
